# debates-analytics

./: .env.dev.tmpl  .env.dist  .env.prod.tmpl  .env.tmpl  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  compose.app.yml  compose.backend.yml  compose.data.yml  compose.debug.yml  compose.frontend.yml  compose.garage.yml  compose.pipeline.yml  compose.workers.yml  compose.yml  docker-compose.yml  justfile  next.md  setup.sh
.github/: pull_request_template.md
.github/workflows/: deploy_docs.yml  format.yaml  mkdocs-ci.yml
components/app/: README.md  justfile
components/backend/: Dockerfile  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml
components/converter/: Dockerfile  pyproject.toml
components/dataloader/: Dockerfile  README.md  justfile
components/dbloader/: Dockerfile  pyproject.toml
components/dbloader/src/: db_worker.py  load.py
components/dbloader/src/dbloader/: mongodb.py  s3.py  solr.py  utils.py
components/debug-cli/: debug-job-register.md  debug-marker-file.md  debug-upload-urls.md  delete-media.md  dummy.txt  list-media.md  response.json
components/docs/: .gitignore  Dockerfile  justfile  mkdocs.yml
config/: .env.core.tmpl  .env.dev.tmpl  .env.prod.tmpl  .env.secret.tmpl  .env.test
docs/: code-of-conduct.md  justfile  mkdocs.yml  pyproject.toml
docs/docs/: api.md  (+7 more)
scripts/: minio-setup.sh
test/: segments-original.json  segments-original.md  segments-translation.json  segments-translation.md  subtitles-original.json  subtitles-original.srt  subtitles-translation.json  subtitles-translation.srt
(+347 files in other folders)
