[project]
name = "debates-dbloader"
version = "0.1.0"
requires-python = ">= 3.11"

dependencies = [
    "pika",
    "typer>=0.12.5",
    "srt>=3.5.3",
    "python-dotenv>=1.0.1",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "pysolr>=3.10.0",
    "boto3>=1.35.49",
    "pyyaml>=6.0.2",
    "pytz>=2024.2",
]
